fix for edge bug (z-index)

--- a/src/style/sass/App.scss
+++ b/src/style/sass/App.scss
@@ -24,8 +24,9 @@
         position: fixed;
         width: 100%;
         height: 100vh;
-        z-index: 0;
-        transition: filter 3s;
+        z-index: -1;
+        transition: filter 3s ease-in-out;
+      
     }
 }
 
