--- a/src/style/sass/Footer.scss
+++ b/src/style/sass/Footer.scss
@@ -1,7 +1,7 @@
 @import '_colors.scss';
 .footer {
     border-top: $borderColor 3px solid;
-    z-index: 2;
+
     grid-area: footer;
     display: flex;
     align-items: flex-start;
@@ -10,6 +10,7 @@
     background-color: $bckgColor;
     box-shadow: 0px -12px 37px -12px rgba(0,0,0,0.66);
     div {
+
         ul {
             list-style: none;
             padding: 0;
