--- a/src/style/sass/Header.scss
+++ b/src/style/sass/Header.scss
@@ -2,7 +2,7 @@
 @import '_variables.scss';
 
 .header {
-    z-index: 2;
+
     grid-area: header;
     background-color: $bckgColor;
     display: flex;
@@ -29,6 +29,7 @@
                 font-size: 1.5rem;
                 line-height: 1.7rem;
                 text-align: center;
+ 
 
             }
         }
@@ -39,7 +40,7 @@
 
         margin: 0.5rem 0 0 0;
         padding: 0;
-        z-index: 2;
+
         &:hover {}
         a {
             text-align: center;
