--- a/src/style/sass/Main.scss
+++ b/src/style/sass/Main.scss
@@ -1,6 +1,6 @@
 @import '_colors.scss';
 .main {
-    z-index: 2;
+
     grid-area: main;
     min-width: 0;
     
