--- a/src/style/sass/_commonLayout.scss
+++ b/src/style/sass/_commonLayout.scss
@@ -8,6 +8,7 @@
     border-top: 3px solid $borderColor;
     border-bottom: 3px solid $borderColor;
     box-shadow: 10px 10px 37px -5px rgba(0,0,0,0.66);
+    z-index: 2;
     h2 {
         margin: 0 0 2rem 0;
     }
@@ -27,6 +28,7 @@
         border-top: 3px solid $borderColor;
         border-bottom: 3px solid $borderColor;
         background-color: $bckgColor;
+        z-index: 2;
         
         
         ul {
